--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.3",
+    "mini-svg-data-uri": "^1.2.3",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^1.4.5",
+    "url-loader": "^4.1.1",
     "webpack-dev-server": "^3.11.0"
   }
 }
