--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
     "presets": [
         [
-            "@babel/preset-env",
-            {
-                "exclude": ["transform-regenerator"]
+            "@babel/preset-env", {
+                "useBuiltIns": "entry",
+                "corejs": 3
             }
         ]
     ]
