--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "core-js": "^3.8.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-cache": "^5.1.2",
+    "regenerator-runtime": "^0.13.7",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "babel-loader": "^8.0.6",
+    "browserslist": "^4.16.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
@@ -50,5 +54,10 @@
     "terser-webpack-plugin": "^1.4.5",
     "url-loader": "^4.1.1",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "browserslist": [
+    "> 0.25%",
+    "not dead",
+    "ie 11"
+  ]
 }
