--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "node src/server/server.js",
     "build": "webpack --config webpack.prod.js",
-    "dev": "node src/server/server.js & webpack-dev-server --config webpack.dev.js --open"
+    "dev": "node src/server/server.js & webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --hot --open --useLocalIp"
   },
   "repository": {
     "type": "git",
