--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
+    "raw-loader": "^4.0.2",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^1.4.5",
