--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^1.4.5",
     "url-loader": "^4.1.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^6.0.2"
   },
   "browserslist": [
     "> 0.25%",
